[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "pod5"
authors = [
  { name = "Oxford Nanopore Technologies plc", email = "support@nanoporetech.com" },
]
readme = "README.md"
requires-python = "~= 3.8"
description = "Oxford Nanopore Technologies Pod5 File Format Python API and Tools"
dynamic = ["version"]
keywords = ['nanopore']
classifiers = [
  'Environment :: Console',
  'Intended Audience :: Developers',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)',
  'Natural Language :: English',
  'Programming Language :: Python :: 3',
  'Topic :: Scientific/Engineering :: Bio-Informatics',
]

dependencies = [
  "deprecated ~= 1.2.18",
  "lib_pod5 == 0.3.34",
  "iso8601",
  "more_itertools",
  "numpy >= 1.21.0",
  'typing-extensions; python_version<"3.10"',
  'pyarrow ~= 18.0.0',
  "pytz",
  "packaging",
  "polars ~= 1.20",
  'h5py ~= 3.11',
  "vbz_h5py_plugin",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "black == 23.3.0",
  "mypy == 1.3.0",
  "pre-commit==v2.21.0",
  "psutil",
  "pytest ~= 7.3",
  "pytest-cov ~= 4.0",
  "pytest-mock",
  "types-Deprecated",
  "types-setuptools",
  "types-pytz",
]

[project.scripts]
pod5 = "pod5.tools.main:main"

[project.urls]
Homepage = "https://github.com/nanoporetech/pod5-file-format"
Issues = "https://github.com/nanoporetech/pod5-file-format/issues"
Documentation = "https://pod5-file-format.readthedocs.io/en/latest/"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test*"]

[tool.setuptools.dynamic]
version = { attr = "pod5._version.__version__" }

[tool.black]
target-version = ["py37"]
