[build-system]
requires = ["setuptools >= 40.6.0", "wheel", "Cython"]
build-backend = "setuptools.build_meta"


[project]
name = "pod5_format_tools"
authors = []
readme = "README.md"
requires-python = "~= 3.7"
dynamic = ["version", "description"]

keywords = ['nanopore']

classifiers=[
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]

dependencies = [
  "pod5_format",
  "h5py",
  "more_itertools",
  "ont-fast5-api",
  "pandas",
  "jsonschema"
]

[project.optional-dependencies]
dev = [
  "pytest ~= 6.2",
  "pytest-cov ~= 3.0",
  "black == 22.3.0",
  "pre-commit"
]

[project.scripts]
pod5-convert-from-fast5 = "pod5_format_tools.pod5_convert_from_fast5:main"
pod5-convert-fast5 = "pod5_format_tools.pod5_convert_from_fast5:main"
pod5-convert-to-fast5 = "pod5_format_tools.pod5_convert_to_fast5:main"
pod5-demux = "pod5_format_tools.pod5_demux:main"
pod5-inspect = "pod5_format_tools.pod5_inspect:main"
pod5-merge = "pod5_format_tools.pod5_merge:main"
pod5-repack = "pod5_format_tools.pod5_repack:main"

[tool.black]
target-version = ["py37"]
